# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.455 2015/02/16 10:56:42 jer Exp $

*youtube-dl-2015.02.16 (16 Feb 2015)

  16 Feb 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.02.10.5.ebuild,
  +youtube-dl-2015.02.16.ebuild:
  Version bump.

*youtube-dl-2015.02.11 (12 Feb 2015)

  12 Feb 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.02.06.ebuild,
  +youtube-dl-2015.02.11.ebuild:
  Version bump.

*youtube-dl-2015.02.10.5 (11 Feb 2015)

  11 Feb 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.02.04.ebuild,
  +youtube-dl-2015.02.10.5.ebuild:
  Version bump.

*youtube-dl-2015.02.06 (07 Feb 2015)

  07 Feb 2015; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2015.02.06.ebuild,
  -youtube-dl-2015.02.02.ebuild:
  Version bump.

*youtube-dl-2015.02.04 (05 Feb 2015)

  05 Feb 2015; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2015.02.04.ebuild:
  Version bump.

*youtube-dl-2015.02.02 (02 Feb 2015)

  02 Feb 2015; Jeroen Roovers <jer@gentoo.org> youtube-dl-2014.11.02.1.ebuild,
  -youtube-dl-2015.01.25.ebuild, -youtube-dl-2015.01.30.2.ebuild,
  +youtube-dl-2015.02.02.ebuild:
  Version bump.

*youtube-dl-2015.01.30.2 (30 Jan 2015)

  30 Jan 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.01.22.ebuild,
  +youtube-dl-2015.01.30.2.ebuild:
  Version bump.

*youtube-dl-2015.01.25 (26 Jan 2015)

  26 Jan 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.01.16.ebuild,
  +youtube-dl-2015.01.25.ebuild:
  Version bump.

*youtube-dl-2015.01.22 (22 Jan 2015)

  22 Jan 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.01.15.1.ebuild,
  +youtube-dl-2015.01.22.ebuild:
  Version bump.

*youtube-dl-2015.01.16 (18 Jan 2015)

  18 Jan 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.01.11.ebuild,
  +youtube-dl-2015.01.16.ebuild:
  Version bump.

*youtube-dl-2015.01.15.1 (16 Jan 2015)
