@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST python-virtkey-0.60.0.tar.gz 40328 SHA256 f8de93ded985454484e6d2e52ce86b4c7aae65bc3cd97fc8aa7259def2a091a1 SHA512 96e48fd5ab861d5bccc40dfed1b71c7ea5ce01aeafaa5b1a58ba7a0250dfe191eab35ef0a95f247e64ea49213a20cc596bbfd64e091fd4624daae38edba2840b WHIRLPOOL 2d61955c3e8e8a256f6ca142e4314597de4a324eff46d0f783340fd6123af5bb16b1383ffa421999a89a68f1a9979b801870b81d31f9bbc6fc20d5fd3b8e4f33
+EBUILD python-virtkey-0.60.0-r1.ebuild 850 SHA256 73f42d94a9cd89394ecc96c0255128b49d8b968a1f9c2ede69f1ee3fcfe81d7e SHA512 525b57d0be7b2d2d4e875f33d54a580b08c403c0a272872e10cbcdd757f79b940fee026fd24b3f0a8a29b5f6605c9ef3b5710b46beae247d439e0d3b88f29393 WHIRLPOOL ed5e009020afd0ddaf7294e0d8aaf0e482748b5f025b765a801b6de59aa83984a3dbbf3ea8eedae5f3f698c3c9fd95a4dc2d44f9e81d8a3e8c8293036a4013ef
 EBUILD python-virtkey-0.60.0.ebuild 767 SHA256 104cf73934c2a374ca30e9f87fadc14c9a4db2b6b91ec3a7360dd798116bbf09 SHA512 e65832550bf926465dd23edc8789bc7ebf8c518610ea7c45f86bb18bde1346c3f5c5690f9ff550189e0ae870e98fb9053e9085bf5036215240f2d13481f4c3bf WHIRLPOOL d3f13d606ae39792fbc302ac07a490f502e424ac471183d6015997d29d43afa4e1e4581d536cea25b97d385ecb5ae7e208a70332cb9e0ae92754cd5c8387d6cd
-MISC ChangeLog 1621 SHA256 8fcae2eabb0855b07d0205e666242ddf0bee58b609def9fd8d1b67fa82c0667a SHA512 0f44c5e9c80f2d0e37626f353b553c8463076c7f51fe96827b34da5aefa04ee0674eb6edc72b4c87e609ee5b4f7c98c8870f1a2ad2884f59ed6978384f626290 WHIRLPOOL 4db6e8cf800b4fba7be7b561cb7cdc0e5cb88d31ab93aa5ce30569429abdc16e1a0cc237f086e2dfede3205ac005a07c24c6316fe84efbb1c827eb1ff64986af
+MISC ChangeLog 1781 SHA256 420b676d130eff2aa4a60c4a6046c838c96524202c4e100a09e0dc0ca1545a34 SHA512 755b242a8a0a5ebd140a318edc9b9a94b4d7116ffe8784cacfd11ed0d1982e6f0d25cc8f055756937e82723953260c982dfeae37e3f548badea3f9d1e612de2f WHIRLPOOL d52a52b930955fee65b4dcb674ab0176db17a93ae747bb8b3e21da83dfdbef114dea08bba7f5661e556d135223266eaa8b76e154f83857eaf090c3cbd8a15d20
 MISC metadata.xml 173 SHA256 3ec76992b5791e7e7841047c0565c5bc7b1243c6c026fd5973ce074fa14a14eb SHA512 3063e04ad957c1309ce3e21bd15fca2f32fad5788bd0ab2667c4e01b21cd6618ca52d017363f510920568506663d1f0838e2632c999ecdc80b35cbdf2c788da6 WHIRLPOOL 08f925be6299c01e05549cfaac8bf1b1010d1824de02c527f1243bd4663ca9a153f67bd6182d892c5c18a355ed3ab7e58554044713fb3377bfe60082748f0e09
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTkNvkACgkQso7CE7gHKw1ELQCdG+DATM4LwIlqz2ojw49DdOnx
+DjUAn0s6/2c31blXz67Ce/HLHFumiY6T
+=f8Im
+-----END PGP SIGNATURE-----
