@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2015.02.11.ebuild,v 1.1 2015/02/12 10:22:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/youtube-dl-2015.02.18.ebuild,v 1.1 2015/02/18 06:57:43 jer Exp $
 
 EAPI=5
 
