@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-virtkey
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-virtkey/ChangeLog,v 1.4 2012/05/04 15:12:16 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-virtkey/ChangeLog,v 1.5 2015/02/18 06:53:30 idella4 Exp $
+
+*python-virtkey-0.60.0-r1 (18 Feb 2015)
+
+  18 Feb 2015; Ian Delaney <idella4@gentoo.org>
+  +python-virtkey-0.60.0-r1.ebuild:
+  revbump; convert -> distutils-r1
 
   04 May 2012; Patrick Lauer <patrick@gentoo.org> python-virtkey-0.60.0.ebuild:
   Migrating dev-util/pkgconfig -> virtual/pkgconfig
@@ -40,4 +46,3 @@
   +python-virtkey-0.50.ebuild, +metadata.xml:
   New ebuild for python-virtkey (bug #248256). Thanks to Denilson for
   suggestions.
-
