@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.455 2015/02/16 10:56:42 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.456 2015/02/18 06:57:43 jer Exp $
+
+*youtube-dl-2015.02.18 (18 Feb 2015)
+
+  18 Feb 2015; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2015.02.18.ebuild,
+  -youtube-dl-2015.02.11.ebuild:
+  Version bump.
 
 *youtube-dl-2015.02.16 (16 Feb 2015)
 
